<resources>
    <string name="app_name">Clear Skies</string>
    <string name="api_key">c6f710aadd9ccc61697c699b2118bc61</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="min_temp">Temp Min: %1$s ℃</string>
    <string name="max_temp">Temp Max: %1$s ℃</string>
    <string name="wind_speed">Wind Speed: %1$s km/h</string>
    <string name="humidity">Humidity: %1$s%%</string>
    <string name="sunrise">Sunrise: %1$s</string>
    <string name="sunset">Sunset: %1$s</string>
    <string name="celcius">ºC</string>
    <string name="city_country">in %1$s, %2$s</string>
    <string name="del">Del</string>
    <string name="city_name_hint">City Name</string>
    <string name="add_city">Add City</string>
    <string name="about">About</string>
</resources>
